--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  edge_detection: 1.1.3
-  external_path: 2.0.1
+  permission_handler: 11.3.1
+  path_provider: 2.1.5
+  path: 1.9.0
+  edge_detection_plus: 1.0.2
 
 dev_dependencies:
   flutter_test:
